feat:调整fullstack-auth中k8s的镜像为arm架构的JDK

--- a/fullstack-auth/k8s/Dockerfile
+++ b/fullstack-auth/k8s/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:8u212-jre-alpine
+#FROM openjdk:8u212-jre-alpine
+FROM arm64v8/openjdk:8-jdk
 MAINTAINER 问秋 liming2011071@163.com
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
